compiler/tests-spec/testData/psi/linked/constant-literals/real-literals/p-2/pos/1.3.kt
/*
 * KOTLIN PSI SPEC TEST (POSITIVE)
 *
 * SPEC VERSION: 0.1-draft
 * PLACE: constant-literals, real-literals -> paragraph 2 -> sentence 1
 * NUMBER: 3
 * DESCRIPTION: Real literals without digits after an exponent mark.
 */

val value = 0.0E

val value = 00.0e
val value = 000.00e-
val value = 0000.000E+

val value = 1.0e
val value = 22.00E+
val value = 333.000e
val value = 4444.0000E
val value = 55555.0e+
val value = 666666.00E-
val value = 7777777.000e
val value = 88888888.0000e
val value = 999999999.0E-

val value = 7.888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888e+
val value = 0.000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000e
val value = 0.000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000e-
val value = 0.000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000e+
